--- a/views/index.pug
+++ b/views/index.pug
@@ -2,4 +2,6 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  em Number Of Categories #{category_count}
+  each category in categories
+    li= category.name
