--- a/views/category_detail.pug
+++ b/views/category_detail.pug
@@ -6,3 +6,7 @@ block content
   each item in items
     li
       a(href=item.url)= item.name 
+
+  a(href=`${categoryUrl}/update`) Update Category
+  br
+  a(href=`${categoryUrl}/delete`) Delete Category 
