--- a/views/category_form.pug
+++ b/views/category_form.pug
@@ -8,6 +8,7 @@ block content
       label(for='name') Category: 
       input#name.form-control.w-50(type='text', placeholder='cars, clothes ect.', name='name', required, value=(undefined===category ? '' : category.name))
       label(for='description') Description:
+      textarea#description.form-control.w-50(rows='4', cols='50', name='description', required) #{undefined===category ? '' : category.description}
     button.btn.btn-primary(type='submit') Submit 
   
   if errors 
