added all crud controls for item

--- a/views/index.pug
+++ b/views/index.pug
@@ -6,5 +6,8 @@ block content
   each category in categories
     li
       a(href=`${category.url}`)= category.name
-  
-  a(href="/categories/create") Create New Category 
+  br
+  br
+  a(href="/categories/create") Create New Category
+  br
+  a(href="/items/create") Create New Item 
