--- a/views/item_detail.pug
+++ b/views/item_detail.pug
@@ -6,3 +6,10 @@ block content
   em Price: #{price}$
   p Number in Stock #{numberInStock}
   p Category: #{categoryName} 
+
+  br
+  br
+
+  a(href=`${itemUrl}/update`) Update Item
+  br
+  a(href=`${itemUrl}/delete`) Delete Item 
